--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stratagem Savior</title>
   </head>
-  <body class="min-h-screen bg-black text-white">
+  <body class="min-h-dvh bg-black text-white">
     <div id="root"></div>
     <span class="icon-arrow-down absolute top-0 opacity-0"></span>
     <script type="module" src="/src/main.tsx"></script>
